--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <div id="app"></div>
   <script src="../jspm_packages/system.js"></script>
   <script src="../config.js"></script>
+  <!-- <script src="bundle.js"></script> -->
   <script>System.import('./main');</script>
 </body>
 </html>
